--- a/src/pages/index.css
+++ b/src/pages/index.css
@@ -23,6 +23,7 @@
 @import url(../blocks/elements/__like-button/_active/elements__like-button_active.css);
 @import url(../blocks/elements/__grid-image/elements__grid-image.css);
 @import url(../blocks/elements/__remove-button/elements__remove-button.css);
+@import url(../blocks/elements/__remove-button/_invalid/elements__remove-button_invalid.css);
 @import url(../blocks/footer/footer.css);
 @import url(../blocks/footer/__copyright/footer__copyright.css);
 @import url(../blocks/popup/popup.css);
